--- a/ANDROID/NasoSpeech_Android/app/src/main/res/layout/activity_add_patient.xml
+++ b/ANDROID/NasoSpeech_Android/app/src/main/res/layout/activity_add_patient.xml
@@ -15,14 +15,15 @@
 <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="60dp">
 
     <ImageView
         android:id="@+id/ivImage"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_gravity="center"
-        android:src="@drawable/cirle"
+        android:src="@drawable/circle"
         android:onClick="selectImage"/>
 
 
@@ -63,7 +64,7 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvdate"
+
                 android:layout_marginTop="40dp">
                 <EditText
                     android:layout_width="480dp"
@@ -71,7 +72,7 @@
                     android:inputType="date"
                     android:ems="10"
                     android:textSize="22sp"
-
+                    android:id="@+id/tvDate"
                     android:background="@android:color/transparent"
                     android:layout_gravity="center_horizontal"
                     android:drawablePadding="10dp"
